--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "concurrently": "^8.2.0"
   },
   "scripts": {
-    "develop": "concurrently \"cd server && nodemon server.js\" \"cd client && npm run start\""
+    "develop": "concurrently \"cd server && nodemon server.js\" \"cd client && npm run start\"",
+    "start": "cd server && node server.js"
   }
 }
