--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "concurrently": "^8.2.0"
   },
   "scripts": {
+    "install": "cd client && npm install && cd ../server && npm install",
     "develop": "concurrently \"cd server && nodemon server.js\" \"cd client && npm run start\"",
     "start": "cd server && node server.js"
   }
